--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 :root {
-    --primary: #47C05A;
-    --darkPrimary: #CB01A1;
+    --primary:  #A29CBB;
+    --darkPrimary: #7D78A3;
     --secundary: #FFCE00;
     --darkSecundary: #DFB503;
     --white: #FFF;
@@ -214,7 +214,7 @@ p{
     border-style: solid; */
 
     border: 1rem solid var(--darkPrimary);
-    background-color: #731063;
+    background-color: #86437c;
     color: var(--white);
     font-size: 2rem;
     font-family: Arial, Helvetica, sans-serif;
