--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ html {
   }
   p{
       font-size: 1.8rem;
+      font-weight: 600;
       font-family: Arial, Helvetica, sans-serif;
       color: var(--white);
   }
@@ -42,6 +43,7 @@ html {
       text-align: center;
       color: var(--secundary);
       font-family: var(--mainFont);
+      font-weight: 400;
   }
   h1{
       font-size: 4rem;
@@ -71,6 +73,7 @@ margin-top: 2rem;
 font-family: var(--mainFont);
 text-align: center;
 font-size: 2.2rem;
+font-weight: 400;
 }
 /*Nav*/ 
 .nav{
@@ -111,10 +114,12 @@ font-size: 2.2rem;
 }
 .product__name{
     font-size: 4rem;
+    font-weight: 500;
 }
 .product__price{
 font-size: 2.8rem;
 color: var(--secundary);
+font-weight: 500;
 }
 .product__name,
 .product__price{
@@ -189,6 +194,7 @@ p{
 }
 .bloque__titulo{
     margin: 0;
+    font-weight: 400;
 }
 /* Pagina del producto */
 .tshirt__content{
@@ -209,10 +215,6 @@ p{
 
 }
 .formulario__campo{
-    /* border-color: var(--darkPrimary);
-    border-width: 1rem;
-    border-style: solid; */
-
     border: 1rem solid var(--darkPrimary);
     background-color: #86437c;
     color: var(--white);
@@ -224,11 +226,12 @@ p{
 .formulario__submit{
     background-color: var(--secundary);
     border: none;
-    font-size: 2rem;
+    font-size: 2.4rem;
     font-family: var(--mainFont);
-    padding: 2rem;
+    padding: 1.5rem;
     transition: backgroud-color .3s ease;
-    grid-column: 1 / 3;;
+    grid-column: 1 / 3;
+    font-weight: 400;
 }
 .formulario__submit:hover{
     cursor: pointer;
